Fix z-index again

--- a/src/assets/css/_base.css
+++ b/src/assets/css/_base.css
@@ -8,7 +8,7 @@
 	justify-content: space-between;
 	margin-bottom: 4em;
 	gap: var(--spacing);
-	z-index: 1000;
+	z-index: 5;
 
 	&::after {
 		content: "";
